Fixed Margin top of hero section on mobile phones

--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -1149,6 +1154,10 @@ html {
 
   .md\:mr-8 {
     margin-right: 2rem;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:flex {
